# time-triggered-system-rust

./: Cargo.toml  README.md
portable/src/: button.rs  datetime.rs
src/: main.rs
