[package]
name = "time-triggered-system-rust"
version = "0.1.0"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
heapless = "0.4.2"
# tm1637-rs = {path="/home/elsuizo/Repos/Others/Rust/tm1637-rs"}
portable = { path = "portable" }
# sh1106 = "0.3.3"
# embedded-graphics = "0.6.2"
[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]
